MobilePageFactory and Appium implementation intermediate commit;